--- a/src/index.css
+++ b/src/index.css
@@ -72,5 +72,5 @@ html {
 }
 
 .btn-pagination {
- @apply flex items-center justify-center w-[2.375rem] h-[2.375rem] border
+ @apply flex items-center justify-center w-[2.375rem] h-[2.375rem] border border-light-gray text-dark-gray
 }
